# ResearchDoc

./: AI-Declaration.md  README.md
backend/: manage.py  pyproject.toml  requirements.txt  vercel.json
backend/ResearchDoc/: asgi.py  settings.py  urls.py  wsgi.py
backend/accounts/: models.py  permissions.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_orcid_user_role.py  0003_alter_user_role.py  0004_user_archive_message_user_archive_reason_and_more.py  0005_subscriptionplan.py
backend/chat/: models.py
backend/chat/migrations/: 0001_initial.py
backend/comparisons/: models.py  urls.py  views.py
backend/comparisons/migrations/: 0001_initial.py
backend/login/: urls.py
backend/papers/: models.py  urls.py  views.py
backend/papers/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_paperasset_asset_type_alter_paper_content_and_more.py  0005_paper_paper_type.py  0006_paper_citation_format_referenceitem_authors_and_more.py  0007_paperchunk_chunk_index_alter_paperchunk_page_number.py
backend/papers/utils/: cloudflare.py  openai.py
backend/projects/: models.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_timelinetask.py  0003_savedcomparison.py  0004_delete_savedcomparison.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/Projects/: CreateProjectPage.tsx  ProjectDetails.tsx  ProjectsList.tsx
frontend/src/Search/: SearchAndCompare.tsx
frontend/src/account/: Account.tsx
frontend/src/admin/: Admin.tsx
frontend/src/auth/: socialAuth.ts
frontend/src/chatpage/: ChatPage.tsx
frontend/src/common/: StatusBadge.tsx  Tag.tsx
frontend/src/comparepage/: ComparePage.tsx
frontend/src/dashboard/: Dashboard.tsx
frontend/src/login/: AuthCallback.tsx  (+2 more)
(+18 files in other folders)
