[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratulw5", email = "pratul.w5@gmail.com"}
]

requires-python = ">=3.12,<3.15"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "pgvector (>=0.4.2,<0.5.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"