    [project]
    name = "backend"
    version = "0.1.0"
    description = ""
    authors = [
        {name = "Pratulw5",email = "pratul.w5@gmail.com"}
    ]
    requires-python = ">=3.12"

    dependencies = [
        "django (>=6.0.3,<7.0.0)",
        "psycopg2-binary (>=2.9.11,<3.0.0)",
        "python-dotenv (>=1.2.2,<2.0.0)",
        "djangorestframework (>=3.17.1,<4.0.0)",
        "django-cors-headers (>=4.9.0,<5.0.0)",
        "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
        "pgvector (>=0.4.2,<0.5.0)",
        "django-stubs (>=5.2.7,<6.0.0)",
        "django-stubs-ext (>=5.2.7,<6.0.0)",
        "boto3 (>=1.43.6,<2.0.0)",
        "cloudflare-r2 (>=0.0.6,<0.0.7)",
        "django-allauth (>=65.16.1,<66.0.0)",
        "dj-rest-auth (>=7.2.0,<8.0.0)",
        "requests (>=2.34.1,<3.0.0)",
        "cryptography (>=48.0.0,<49.0.0)",
        "openai (>=2.36.0,<3.0.0)",
        "pymupdf (>=1.27.2.3,<2.0.0.0)",
        "python-docx (>=1.2.0,<2.0.0)"
    ]

    [tool.poetry]
    package-mode = false

    [build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"